--- a/Case1-WKWebView-Web3/JavascriptCode/package.json
+++ b/Case1-WKWebView-Web3/JavascriptCode/package.json
@@ -1,12 +1,12 @@
 {
-  "name": "case1",
+  "name": "Case1-WKWebView-Web3",
   "version": "1.0.0",
   "description": "",
   "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "",
+  "author": "Patricia Centenera Bejar",
   "license": "ISC",
   "dependencies": {
     "browserify": "^16.5.1",
